syntax = "proto3";

package license;

message KeepAliveMessage{
	string hash = 1; // Job ID of previous request by the same client
	string vendor = 2; // Xilinx or Cadence
	string feature = 3; // Vivado, Xcelium, etc
}

message PollingRequest{
	string vendor = 1; // Xilinx or Cadence
	string feature = 2; // Vivado, Xcelium, etc
	int32 quantity = 3; // Number of licenses
	string user = 4; // Username
	string hash = 5; // Job ID of previous request by the same client
}

message PollingResponse{
	bool acquired = 1; // status of the acquired license
	string hash = 2; // Job ID of previous request by the same client
}

service License {
	rpc KeepAlive(stream KeepAliveMessage) returns (stream KeepAliveMessage) {}
	rpc Polling(stream PollingRequest) returns (stream PollingResponse) {}
}
